tests/invalid/open_wrong_arg_count/main.py
def run_case() -> None:
    data: str = open("a.txt", "r")


if __name__ == "__main__":
    run_case()
